--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "caouecs/laravel-lang": "~3.0",
         "fideloper/proxy": "~3.3",
+        "intervention/image": "dev-master",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
-        "intervention/image": "dev-master"
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
